one issue navbar bottom letter spacing

--- a/src/global.scss
+++ b/src/global.scss
@@ -145,10 +145,10 @@ ion-content {
     letter-spacing: -1px;
   }
   ion-label {
-    letter-spacing: -2px!important;
+    letter-spacing: -1px!important;
   }
   ion-card {
-    letter-spacing: -2px!important;
+    letter-spacing: -1px!important;
   }
   ion-button {
     letter-spacing: -1px;
